--- a/src/components/Upload.astro
+++ b/src/components/Upload.astro
@@ -14,9 +14,13 @@ const putObjectCommand = new PutObjectCommand({
 const client = new S3Client();
 
 const uploadUrl = await getSignedUrl(new S3Client(), putObjectCommand);
+
+import Drag from '../components/Drag.vue';
 ---
 
-<form action={uploadUrl}>
+<Drag client:only="vue" uploadUrl={uploadUrl}/>
+
+<!--form action={uploadUrl}>
   <input name="file" type="file" accept="image/png, image/jpeg" />
   <button type="submit">Upload</button>
 </form>
@@ -39,4 +43,4 @@ const uploadUrl = await getSignedUrl(new S3Client(), putObjectCommand);
 
     window.location.reload();
   });
-</script>
+</script-->
