--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Masonry from "../components/Masonry.astro";
-import Upload from "../components/Upload.astro";
 ---
-<Layout title="SST + Astro + Vue">
+<Layout title="SST + Astro + Vue + Tailwind">
   <main>
-    <Upload/>
     <Masonry/>
   </main>
 </Layout>
-
-<style>
-  * { box-sizing: border-box; }
-
-  body {
-    font-family: sans-serif;
-    background: #000;
-    width: 1280px;
-    margin: 0 auto;
-  }
-</style>
