--- a/src/components/Masonry.astro
+++ b/src/components/Masonry.astro
@@ -1,9 +1,9 @@
 ---
 import { Resource } from "sst";
 import { getSignedUrl } from "@aws-sdk/s3-request-presigner";
-import { S3Client, ListObjectsV2Command, GetObjectCommand } from "@aws-sdk/client-s3";
+import { S3Client, ListObjectsV2Command, GetObjectCommand, PutObjectCommand } from "@aws-sdk/client-s3";
+import Drag from '../components/Drag.vue';
 
-// noinspection TypeScriptUnresolvedReference
 const bucket = Resource.MyBucket.name;
 
 const client = new S3Client();
@@ -12,75 +12,42 @@ const listCommand = new ListObjectsV2Command({
   Bucket: bucket
 });
 
-// noinspection TypeScriptValidateTypes
-const { Contents } = await client.send(listCommand);
-
-// Sort
-const sortedContents = Contents!.sort((a, b) => (
-    b.LastModified?.getTime() ?? 0) - (a.LastModified?.getTime() ?? 0
-  )
-);
-
 const urls = [];
 
-for (const content of sortedContents) {
-  const getObjectCommand = new GetObjectCommand({
-    Bucket: bucket,
-    Key: content.Key
-  });
+const { Contents } = await client.send(listCommand);
 
-  const url = await getSignedUrl(new S3Client(), getObjectCommand);
+if (Contents) {
+  const sortedContents = Contents.sort((a, b) => (
+      b.LastModified?.getTime() ?? 0) - (a.LastModified?.getTime() ?? 0
+    )
+  );
 
-  urls.push(url);
+
+  for (const content of sortedContents) {
+    const getObjectCommand = new GetObjectCommand({
+      Bucket: bucket,
+      Key: content.Key
+    });
+
+    const url = await getSignedUrl(new S3Client(), getObjectCommand);
+
+    urls.push(url);
+  }
 }
----
 
-<div class="grid">
-  <div class="grid-sizer"></div>
+const putObjectCommand = new PutObjectCommand({
+  Key: crypto.randomUUID(),
+  Bucket: bucket
+});
+
+const uploadUrl = await getSignedUrl(client, putObjectCommand);
+---
+<div class="columns-4 space-y-5">
+  <div class="bg-neutral-400 rounded-md shadow-md">
+    <Drag client:only="vue" uploadUrl={uploadUrl}/>
+  </div>
+
   {urls.map((url) => (
-    <div class="grid-item"><img src={url} alt=""></div>
+    <div><img class="rounded-md shadow-md" src={url} alt="" loading="lazy"></div>
   ))}
 </div>
-
-<style>
-  .grid {
-    background: #000;
-  }
-
-  .grid:after {
-    content: '';
-    display: block;
-    clear: both;
-  }
-
-  .grid-sizer,
-  .grid-item {
-    width: 33.333%;
-  }
-
-  .grid-item {
-    float: left;
-  }
-
-  .grid-item img {
-    display: block;
-    max-width: 100%;
-  }
-</style>
-
-<script>
-  import Masonry from "masonry-layout";
-  import imagesLoaded from "imagesloaded";
-
-  const grid = document.querySelector('.grid');
-
-  const masonry = new Masonry(grid, {
-    itemSelector: '.grid-item',
-    columnWidth: '.grid-sizer',
-    percentPosition: true
-  });
-
-  imagesLoaded(grid).on('progress', function() {
-    masonry.layout();
-  });
-</script>
