--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,15 +5,16 @@ interface Props {
 
 const { title } = Astro.props;
 ---
-
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
     <title>{title}</title>
   </head>
-  <body>
-    <slot/>
+  <body class="bg-white dark:bg-stone-950">
+    <div class="container mx-auto p-8">
+      <slot/>
+    </div>
   </body>
 </html>
